# MachineLearningCourse

./: .gitignore  LICENSE  README.md  lab_conv_nets.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
machine_learning_course/: lab_s01_utils.py  lab_s01e01.py  lab_s01e02.py  lab_s01e02_battery_chatgpt.py  lab_s01e03.py  lab_s01e04.py  lab_s01e05.py  lab_s01e06.py  lab_s01e07.py  lab_s01e07_nlp.py  lab_s01e07_nlp_utils.py  lab_s01e09.py  lab_s01e09_reinforcement_learning.py  lab_s01e10.py  lab_s01e_XX_notes.py  requirements.txt
machine_learning_course/LAB01/: main.py
machine_learning_course/LAB02/: main.py
machine_learning_course/LAB03/: main.py
machine_learning_course/LAB04/: main.py
machine_learning_course/common/: __init__.py  utils.py
machine_learning_course/project_2023/Lastname_Firstname/: Lastname_Firstname.py  Lastname_Firstname_result.csv
machine_learning_course/project_2023/Lastname_Firstname/processing/: utils.py
machine_learning_course/project_2023/data/: sample_dataset.csv
machine_learning_course/project_2024/: nba_data_hello_world.py
machine_learning_course/project_2025/: calc_score.py
