[project]
name = "machinelearningcourse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "mlxtend>=0.24.0",
    "nba-api>=1.11.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pytorch-lightning>=2.5.2",
    "scikit-learn>=1.8.0",
    "scipy-stubs~=1.17.1",
    "sdv>=1.32.1",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchtext>=0.6.0",
    "torchvision>=0.26.0",
    "u8darts[pmdarima,torch]>=0.39.0",
    "wheel>=0.46.3",
]
